--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>toschief</title>
+  </head>
   <body>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem magni
-    quasi, exercitationem voluptas harum ex animi. Et vel suscipit, itaque esse
-    perspiciatis iste excepturi quam eius, expedita rerum tenetur? Error.
+    <h1>toschief</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis blanditiis
+      magni perspiciatis porro nobis illo quas nam, doloribus consequuntur ab
+      cum sunt. Hic dolores, reiciendis quidem temporibus pariatur dolore
+      libero.
+    </p>
   </body>
 </html>
