--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toschief</title>
   </head>
+  <header id="h1">
+    <link rel="stylesheet" href="./Stylesheets/header.css" />
+    <h1 id="a1">toschief</h1>
+    <div>
+      <nav id="nav1">
+        <a id="a2" href="">Home</a>
+        <a id="a2" href="">Crypty</a>
+      </nav>
+    </div>
+  </header>
   <body>
-    <h1>toschief</h1>
+    <h1>Home</h1>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis blanditiis
       magni perspiciatis porro nobis illo quas nam, doloribus consequuntur ab
