--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
       <nav id="nav1">
         <a id="a2" href="">Home</a>
-        <a id="a2" href="">Crypty</a>
+        <a id="a2" href="./crypty/index.html">Crypty</a>
       </nav>
     </div>
   </header>
