--- a/index.html
+++ b/index.html
@@ -10,18 +10,41 @@
     <h1 id="a1">toschief</h1>
     <div>
       <nav id="nav1">
-        <a id="a2" href="">Home</a>
-        <a id="a2" href="./crypty/index.html">Crypty</a>
+        <a id="a2" href="./index.html">Home</a>
+        <a id="a2" href="./crypty.html">Crypty</a>
       </nav>
     </div>
   </header>
-  <body>
-    <h1>Home</h1>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis blanditiis
-      magni perspiciatis porro nobis illo quas nam, doloribus consequuntur ab
-      cum sunt. Hic dolores, reiciendis quidem temporibus pariatur dolore
-      libero.
-    </p>
+  <body style="background-color: #2d2d2d">
+    <link rel="stylesheet" href="./stylesheets/home.css" />
+
+    <div class="mainc">
+      <h1 id="hs">My projects</h1>
+      <div id="d">
+        <h2 id="h">Dell-Latitude-7400-Hackintosh</h2>
+        <div id="d1">
+          <p>EFI files for hackintoshing the Dell Latitude 7400</p>
+        </div>
+        <div id="d2">
+          <p>
+            <a href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh"
+              >Download here</a
+            >
+          </p>
+        </div>
+      </div>
+
+      <div id="d">
+        <h2 id="h">Crypty</h2>
+        <div id="d1">
+          <p>Encryption program for different methods</p>
+        </div>
+        <div id="d2"><p>Crypty-Web: here</p></div>
+      </div>
+    </div>
   </body>
+  <footer id="f1">
+    <link rel="stylesheet" href="./stylesheets/footer.css" />
+    <p>Created by toschief</p>
+  </footer>
 </html>
