--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toschief</title>
+    <link rel="stylesheet" type="text/css" href="./Stylesheets/header.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/home.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/footer.css">
   </head>
-  <header id="h1">
-    <h1 id="a1">toschief</h1>
-    <div>
-      <nav id="nav1">
-        <a id="a2" href="./index.html">Home</a>
-        <a id="a2" href="./crypty.html">Crypty</a>
-      </nav>
-    </div>
-  </header>
   <body style="background-color: #2d2d2d">
-    <link rel="stylesheet" href="./Stylesheets/header.css" />
-    <link rel="stylesheet" href="./stylesheets/home.css" />
-    <link rel="stylesheet" href="./stylesheets/footer.css" />
+    <header id="h1">
+      <h1 id="a1">toschief</h1>
+      <div>
+        <nav id="nav1">
+          <a id="a2" href="./index.html">Home</a>
+          <a id="a2" href="./crypty.html">Crypty</a>
+        </nav>
+      </div>
+    </header>
 
     <div class="mainc">
       <h1 id="hs">My projects</h1>
-      <div id="d">
+      <div class="d">
         <h2 id="h">Dell-Latitude-7400-Hackintosh</h2>
-        <div id="d1">
+        <div class="d1">
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
-        <div id="d2">
+        <div class="d2">
           <p>
             <a href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh"
               >Download here</a
@@ -35,16 +35,16 @@
         </div>
       </div>
 
-      <div id="d">
+      <div class="d">
         <h2 id="h">Crypty</h2>
-        <div id="d1">
+        <div class="d1">
           <p>Encryption program for different methods</p>
         </div>
-        <div id="d2"><p>Crypty-Web: here</p></div>
+        <div class="d2"><p>Crypty-Web: here</p></div>
       </div>
     </div>
+    <footer id="f1">
+      <p>Created by toschief</p>
+    </footer>
   </body>
-  <footer id="f1">
-    <p>Created by toschief</p>
-  </footer>
 </html>
