--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toschief</title>
-    <link rel="stylesheet" type="text/css" href="./Stylesheets/header.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/home.css">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/footer.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/wpr.css">
   </head>
   <body style="background-color: #2d2d2d">
     <header id="h1">
