--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toschief</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/home.css">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/wpr.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/home.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/wpr.css" />
   </head>
   <body style="background-color: #2d2d2d">
     <header id="h1">
@@ -25,6 +25,10 @@
         <div class="d1">
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
+        <div class="d1">
+          <p>Versions:</p>
+          <p>- Ventura</p>
+        </div>
         <div class="d2">
           <p>
             <a href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh"
@@ -39,7 +43,15 @@
         <div class="d1">
           <p>Encryption program for different methods</p>
         </div>
-        <div class="d2"><p>Crypty-Web: here</p></div>
+        <div class="d1">
+          <p>Includes:</p>
+          <p>- Casear</p>
+          <p>- Vigenere</p>
+          <p>- Playfair</p>
+        </div>
+        <div class="d2">
+          <p>Crypty-Web: <a href="./crypty.html">here</a></p>
+        </div>
       </div>
     </div>
     <footer id="f1">
