--- a/crypty.html
+++ b/crypty.html
@@ -31,12 +31,12 @@
           <table id="t1">
             <tr>
               <th>
-                <button onclick="onbuttonleft()" class="button1">Left</button>
+                <button onclick="onbuttonleft()" class="button1"><</button>
               </th>
               <th><p id="keyletter">Key: A</p></th>
               <th><p id="keynumber">0</p></th>
               <th>
-                <button onclick="onbuttonright()" class="button1">Right</button>
+                <button onclick="onbuttonright()" class="button1">></button>
               </th>
             </tr>
           </table>
@@ -45,7 +45,7 @@
         <div class="d2">
           <div>
             <p id="output"></p>
-            <textarea id="input"></textarea>
+            <textarea id="input" placeholder="Input your text here"></textarea>
           </div>
           <button onclick="onbuttonstart()" class="button2">Start</button>
         </div>
@@ -67,13 +67,13 @@
             <label>Encrypt</label>
           </div>
 
-          <textarea id="keyinputv"></textarea>
+          <textarea id="keyinputv" placeholder="Input your key here"></textarea>
         </div>
 
         <div class="d2">
           <div>
             <p id="outputv"></p>
-            <textarea id="inputv"></textarea>
+            <textarea id="inputv" placeholder="Input your text here"></textarea>
           </div>
           <button onclick="vigenereCipher()" class="button2">Start</button>
         </div>
@@ -95,13 +95,13 @@
             <label>Encrypt</label>
           </div>
 
-          <textarea id="keyinputp"></textarea>
+          <textarea id="keyinputp" placeholder="Input your key here"></textarea>
         </div>
 
         <div class="d2">
           <div>
             <p id="outputp"></p>
-            <textarea id="inputp"></textarea>
+            <textarea id="inputp" placeholder="Input your text here"></textarea>
           </div>
           <button onclick="performCipher()" class="button2">Start</button>
         </div>
