--- a/index.html
+++ b/index.html
@@ -20,25 +20,33 @@
 
     <div class="mainc">
       <h1 id="hs">My projects</h1>
-      <div class="d">
+      <div class="d" id="dellhack">
         <h2 id="h">Dell-Latitude-7400-Hackintosh</h2>
         <div class="d1">
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
         <div class="d1">
-          <p>Versions:</p>
-          <p>- Ventura</p>
+          <h3 class="new">1.1.0</h3>
+          <div class="changelog">
+            <p>Version 1.1.0 brings:</p>
+            <li>Monterey and BigSur support</li>
+            <li>fixed Bluetooth</li>
+            <li>minor kext upgrades</li>
+            <p>Whats next:</p>
+            <li>Sonoma support</li>
+            <li>Opencore update (should have come out two months ago)</li>
+          </div>
         </div>
         <div class="d2">
           <p>
-            <a href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh"
-              >Download here</a
+            <a href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh/releases"
+              >Download on Github</a
             >
           </p>
         </div>
       </div>
 
-      <div class="d">
+      <div class="d" id="crypty">
         <h2 id="h">Crypty</h2>
         <div class="d1">
           <p>Encryption program for different methods</p>
@@ -50,7 +58,7 @@
           <p>- Playfair</p>
         </div>
         <div class="d2">
-          <p>Crypty-Web: <a href="./crypty.html">here</a></p>
+          <p><a href="./crypty.html">Crypty-Web</a></p>
         </div>
       </div>
     </div>
