projects remork part 2

--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
           <p>Encryption program for different methods</p>
         </div>
         <div class="d1">
-          <p>Includes:</p>
-          <p>- Casear</p>
-          <p>- Vigenere</p>
-          <p>- Playfair</p>
+          <h3>1.0.0</h3>
+          <div class="changelog">
+          <p>Includes methodes:</p>
+          <li>Casear</li>
+          <li>Vigenere</li>
+          <li>Playfair</li>
+        </div>
         </div>
         <div class="d2">
           <p><a href="./crypty.html">Crypty-Web</a></p>
