--- a/crypty.html
+++ b/crypty.html
@@ -14,6 +14,7 @@
         <nav id="nav1">
           <a href="./index.html" id="a2">Home</a>
           <a href="./crypty.html" id="a2">Crypty</a>
+          <a id="a2" href="https://github.com/toschief">Github</a>
         </nav>
       </div>
     </header>
