--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav id="nav1">
           <a id="a2" href="./index.html">Home</a>
           <a id="a2" href="./crypty.html">Crypty</a>
+          <a id="a2" href="https://github.com/toschief">Github</a>
         </nav>
       </div>
     </header>
