--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         </div>
         <div class="d2">
           <p>
-            <a href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh/releases"
+            <a
+              href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh/releases"
               >Download on Github</a
             >
           </p>
@@ -55,11 +56,11 @@
         <div class="d1">
           <h3>1.0.0</h3>
           <div class="changelog">
-          <p>Includes methodes:</p>
-          <li>Casear</li>
-          <li>Vigenere</li>
-          <li>Playfair</li>
-        </div>
+            <p>Includes methodes:</p>
+            <li>Casear</li>
+            <li>Vigenere</li>
+            <li>Playfair</li>
+          </div>
         </div>
         <div class="d2">
           <p><a href="./crypty.html">Crypty-Web</a></p>
