--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
         <div class="d1">
-          <h3 class="new">1.1.0</h3>
+          <h3 class="new">1.1.1</h3>
           <div class="changelog">
-            <p>Version 1.1.0 brings:</p>
-            <li>Monterey and BigSur support</li>
-            <li>fixed Bluetooth</li>
-            <li>minor kext upgrades</li>
+            <p>Version 1.1.1 brings:</p>
+            <li>Opencore update (finally)</li>
+            <li>minor kext changes</li>
             <p>Whats next:</p>
             <li>Sonoma support</li>
-            <li>Opencore update (should have come out two months ago)</li>
           </div>
         </div>
         <div class="d2">
