--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
     <div class="mainc">
       <h1 id="hs">My projects</h1>
-      <div class="d" id="dellhack">
+      <div class="d">
         <h2 id="h">Dell-Latitude-7400-Hackintosh</h2>
         <div class="d1">
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
         <div class="d1">
-          <h3 class="new">1.1.1</h3>
+          <h3>1.1.1</h3>
           <div class="changelog">
             <p>Version 1.1.1 brings:</p>
             <li>Opencore update (finally)</li>
@@ -69,13 +69,38 @@
         </div>
       </div>
 
-      <div class="d" id="crypty">
+      <div class="d">
         <h2 id="h">Crypty</h2>
         <div class="d1">
           <p>Encryption program for different methods</p>
         </div>
         <div class="d1">
           <h3>1.0.0</h3>
+          <div class="changelog">
+            <p>Version 1.0.0 brings:</p>
+            <li>Release!</li>
+            <p>Whats next:</p>
+            <li>Many fixes</li>
+            <li>More features?</li>
+            <li>More platforms</li>
+          </div>
+        </div>
+        <div class="d2">
+          <p>
+            <a href="https://github.com/toschief/Crypty/releases"
+              >Download on Github</a
+            >
+          </p>
+        </div>
+      </div>
+
+      <div class="d" id="crypty">
+        <h2 id="h">Crypty-Web</h2>
+        <div class="d1">
+          <p>Encryption program for different methods</p>
+        </div>
+        <div class="d1">
+          <h3>1.1.0</h3>
           <div class="changelog">
             <p>Includes methodes:</p>
             <li>Casear</li>
