--- a/index.html
+++ b/index.html
@@ -95,17 +95,15 @@
       </div>
 
       <div class="d" id="crypty">
-        <h2 id="h">Crypty-Web</h2>
+        <h2 id="h">toschief.github.io</h2>
         <div class="d1">
-          <p>Encryption program for different methods</p>
+          <p>My website</p>
         </div>
         <div class="d1">
-          <h3>1.1.0</h3>
+          <h3>Features</h3>
           <div class="changelog">
-            <p>Includes methodes:</p>
-            <li>Casear</li>
-            <li>Vigenere</li>
-            <li>Playfair</li>
+            <li>Project Overview</li>
+            <li>Crypty-Web</li>
           </div>
         </div>
         <div class="d2">
