--- a/crypty.html
+++ b/crypty.html
@@ -43,7 +43,7 @@
     </header>
 
     <div class="mainc">
-      <h1 id="hs">Crypty</h1>
+      <h1 id="hs">Crypty-Web</h1>
 
       <div class="d">
         <h2 id="h">Key Generator</h2>
