--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <div class="mainc">
-      <h1 id="hs">My projects</h1>
+      <h1 id="hs">My Projects</h1>
       <div class="d">
         <h2 id="h">Dell-Latitude-7400-Hackintosh</h2>
         <div class="d1">
