--- a/crypty.html
+++ b/crypty.html
@@ -36,7 +36,7 @@
         </script>
         <nav id="nav1">
           <a href="./index.html" class="a2">Home</a>
-          <a href="./crypty.html" class="a2">Crypty</a>
+          <a href="./crypty.html" class="a2">Crypty-Web</a>
           <a class="a2" href="https://github.com/toschief">Github</a>
         </nav>
       </div>
