--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </script>
         <nav id="nav1">
           <a class="a2" href="./index.html">Home</a>
-          <a class="a2" href="./crypty.html">Crypty</a>
+          <a class="a2" href="./crypty.html">Crypty-Web</a>
           <a class="a2" href="https://github.com/toschief">Github</a>
         </nav>
       </div>
