temp remove Crypty for Android

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="d">
+       <!-- <div class="d">
         <h2 id="h">Crypty</h2>
         <div class="d1">
           <p>Encryption program for different methods</p>
@@ -93,7 +93,7 @@
             >
           </p>
         </div>
-      </div>
+      </div> -->
 
       <div class="d" id="crypty">
         <h2 id="h">toschief.github.io</h2>
