--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
         <div class="d1">
-          <h3>1.2.0</h3>
+          <h3>1.2.1</h3>
           <div class="changelog">
-            <p>Version 1.2.0 brings:</p>
-            <li>Sonoma support (Could be unstable)</li>
-            <li>minor kext changes</li>
-            <li>some fixes</li>
+            <p>Version 1.2.1 brings:</p>
+            <li>Opencore Update</li>
+            <li>minor Kext Updates</li>
+            <li>better Ventura Support</li>
             <p>Whats next:</p>
             <li>Nothing big</li>
           </div>
