remove crypty and crypty-web

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           <button class="dropbtn" onclick="myFunction()">Menu</button>
           <div class="dropdown-content" id="myDropdown">
             <a href="./index.html">Home</a>
-            <a href="./crypty.html">Crypty</a>
             <a href="https://github.com/toschief">Github</a>
           </div>
         </div>
@@ -36,7 +35,6 @@
         </script>
         <nav id="nav1">
           <a class="a2" href="./index.html">Home</a>
-          <a class="a2" href="./crypty.html">Crypty-Web</a>
           <a class="a2" href="https://github.com/toschief">Github</a>
         </nav>
       </div>
@@ -70,32 +68,30 @@
         </div>
       </div>
 
-       <!-- <div class="d">
-        <h2 id="h">Crypty</h2>
+      <!-- <div class="d">
+        <h2 id="h">!title!</h2>
         <div class="d1">
-          <p>Encryption program for different methods</p>
+          <p>!describtion!</p>
         </div>
         <div class="d1">
-          <h3>1.0.0</h3>
+          <h3>!version!</h3>
           <div class="changelog">
-            <p>Version 1.0.0 brings:</p>
-            <li>Release!</li>
+            <p>Version !version! brings:</p>
+            <li>!changelog!</li>
             <p>Whats next:</p>
-            <li>Many fixes</li>
-            <li>More features?</li>
-            <li>More platforms</li>
+            <li>!next!</li>
           </div>
         </div>
         <div class="d2">
           <p>
-            <a href="https://github.com/toschief/Crypty/releases"
-              >Download on Github</a
+            <a href="!link!"
+              >!download!</a
             >
           </p>
         </div>
       </div> -->
 
-      <div class="d" id="crypty">
+      <div class="d">
         <h2 id="h">toschief.github.io</h2>
         <div class="d1">
           <p>My website</p>
@@ -104,11 +100,14 @@
           <h3>Features</h3>
           <div class="changelog">
             <li>Project Overview</li>
-            <li>Crypty-Web</li>
           </div>
         </div>
         <div class="d2">
-          <p><a href="./crypty.html">Crypty-Web</a></p>
+          <p>
+            <a href="https://github.com/toschief/toschief.github.io"
+              >Visit on Github</a
+            >
+          </p>
         </div>
       </div>
     </div>
