--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
         <div class="d1">
-          <h3>1.2.1</h3>
+          <h3>1.2.2</h3>
           <div class="changelog">
-            <p>Version 1.2.1 brings:</p>
+            <p>Version 1.2.2 brings:</p>
             <li>Opencore Update</li>
-            <li>minor Kext Updates</li>
-            <li>better Ventura Support</li>
+            <li>Kext Updates</li>
+            <li>better FileVault Support</li>
             <p>Whats next:</p>
             <li>Nothing big</li>
           </div>
