--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
         <button class="dropbtn" onclick="dropdown()">Menu</button>
         <div class="dropdown-content" id="myDropdown">
           <a href="./index.html">Home</a>
-          <a href="https://github.com/toschief">Github</a>
+          <a href="https://github.com/toschief">GitHub</a>
         </div>
       </div>
     
@@ -30,7 +30,7 @@
     <div class="mainc">
       <h1 id="hs">My Projects</h1>
       <div class="d">
-        <h2 id="h">Dell-Latitude-7400-Hackintosh</h2>
+        <h2>Dell-Latitude-7400-Hackintosh</h2>
         <div class="d1">
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
@@ -38,18 +38,22 @@
           <h3>1.2.2</h3>
           <div class="changelog">
             <h4>Updates</h4>
+            <ul>
             <li>Opencore Update</li>
             <li>Kext Updates</li>
             <li>better FileVault Support</li>
+            </ul>
             <h4>Whats next</h4>
+            <ul>
             <li>Nothing big</li>
+            </ul>
           </div>
         </div>
         <div class="d2">
           <p>
             <a
               href="https://github.com/toschief/Dell-Latitude-7400-Hackintosh/releases"
-              >Download on Github</a
+              >Download on GitHub</a
             >
           </p>
         </div>
@@ -79,20 +83,22 @@
       </div> -->
 
       <div class="d">
-        <h2 id="h">toschief.github.io</h2>
+        <h2>toschief.github.io</h2>
         <div class="d1">
           <p>My website</p>
         </div>
         <div class="d1">
           <h3>Features</h3>
           <div class="changelog">
+            <ul>
             <li>Project Overview</li>
+            </ul>
           </div>
         </div>
         <div class="d2">
           <p>
             <a href="https://github.com/toschief/toschief.github.io"
-              >Visit on Github</a
+              >Visit on GitHub</a
             >
           </p>
         </div>
