--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
           <p>EFI files for hackintoshing the Dell Latitude 7400</p>
         </div>
         <div class="d1">
-          <h3>1.2.2</h3>
+          <h3>1.2.3</h3>
           <div class="changelog">
             <h4>Updates</h4>
             <ul>
-            <li>Opencore Update</li>
             <li>Kext Updates</li>
-            <li>better FileVault Support</li>
+            <li>better power management</li>
             </ul>
-            <h4>Whats next</h4>
+            <h4>What's next</h4>
             <ul>
             <li>Nothing big</li>
             </ul>
